<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/today" />
    <item
        android:id="@+id/trendsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/trends" />
    <item
        android:id="@+id/logFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Log" />
    <item
        android:id="@+id/insightsFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/insights" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>
